# product_price_tracker

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  deploy.yml
utils/: amazon_price_tracker.py  amazon_price_tracker_2.py  common.py  config.py  db.py  email_reports.py  playwright_price_scraper.py  products.csv  scrape_amazon.py  scrape_flipkart.py
