[project]
name = "price-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
# Which files to lint
target-version = "py311"
line-length = 100
extend-exclude = ["migrations", "venv"]

# Enable rules
select = ["E", "F", "I"]   # E = pycodestyle, F = pyflakes, I = isort
ignore = ["E501"]          # Example: ignore line length

# Optional: fix automatically
[tool.ruff.lint]
fix = true
